--- a/project.json
+++ b/project.json
@@ -1,50 +1,14 @@
 {
-  "name": "diamonitor",
-  "about": "Светлячок",
-  "version": "0.3.4",
-  "notes": "Добавлено автообновление с GitHub",
+  "name": "Название проекта",
+  "about": "Краткое описание проекта",
+  "version": "1.0",
+  "notes": "Комментарии к обновлению",
   "builds": [
     {
       "chipFamily": "ESP8266",
       "parts": [
         {
-          "path": "https://github.com/lexhome/diamonitor/blob/main/bin/firmware.bin",
-          "offset": 0
-        }
-      ]
-    },
-    {
-      "chipFamily": "ESP32",
-      "parts": [
-        {
-          "path": "https://github.com/lexhome/diamonitor/main/bin/firmware.bin",
-          "offset": 0
-        }
-      ]
-    },
-    {
-      "chipFamily": "ESP32-C3",
-      "parts": [
-        {
-          "path": "https://github.com/lexhome/diamonitor/main/bin/firmware.bin",
-          "offset": 0
-        }
-      ]
-    },
-    {
-      "chipFamily": "ESP32-S2",
-      "parts": [
-        {
-          "path": "https://github.com/lexhome/diamonitor/main/bin/firmware.bin",
-          "offset": 0
-        }
-      ]
-    },
-    {
-      "chipFamily": "ESP32-S3",
-      "parts": [
-        {
-          "path": "https://github.com/lexhome/diamonitor/main/bin/firmware.bin",
+          "path": "https://raw.githubusercontent.com/lexhome/diamonitor/main/bin/firmware.bin",
           "offset": 0
         }
       ]
