--- a/project.json
+++ b/project.json
@@ -1,7 +1,7 @@
 {
-  "name": "Название проекта",
-  "about": "Краткое описание проекта",
-  "version": "1.0",
+  "name": "diamonitor",
+  "about": "Светлячок",
+  "version": "0.3.2",
   "notes": "Комментарии к обновлению",
   "builds": [
     {
