--- a/project.json
+++ b/project.json
@@ -1,8 +1,8 @@
 {
   "name": "diamonitor",
   "about": "Светлячок",
-  "version": "0.3.3",
-  "notes": "Комментарии к обновлению",
+  "version": "0.3.6",
+  "notes": "Добавлено авто обновление в цикле (1 раз в сутки). Адрес NS теперь можно вводить с "https://" в начале и с завершающим слешем "/" в конце",
   "builds": [
     {
       "chipFamily": "ESP8266",
