--- a/project.json
+++ b/project.json
@@ -1,8 +1,8 @@
 {
   "name": "diamonitor",
   "about": "Светлячок",
-  "version": "0.3.8",
-  "notes": "Исправлен % заряда. Реорганизовано меню сетевых настроек",
+  "version": "0.3.9",
+  "notes": "Реорганизовано меню сетевых настроек",
   "builds": [
     {
       "chipFamily": "ESP8266",
