--- a/project.json
+++ b/project.json
@@ -1,8 +1,8 @@
 {
   "name": "diamonitor",
   "about": "Светлячок",
-  "version": "0.3.10",
-  "notes": "исправлен баг - время после изменения часового пояса изменялось только после перезагрузки. Добавлено отображение версии прошивки в настройках",
+  "version": "0.3.11",
+  "notes": "исправлен баг подключения к NS при авторизации по токену доступа",
   "builds": [
     {
       "chipFamily": "ESP8266",
