--- a/project.json
+++ b/project.json
@@ -1,8 +1,8 @@
 {
   "name": "diamonitor",
   "about": "Светлячок",
-  "version": "0.3.11",
-  "notes": "исправлен баг подключения к NS при авторизации по токену доступа",
+  "version": "0.3.13",
+  "notes": "исправление ошибок в попытках соединения с сервером NS",
   "builds": [
     {
       "chipFamily": "ESP8266",
